Fixed Text truncated overflow, label line-height 1

--- a/src/text.css
+++ b/src/text.css
@@ -96,6 +96,7 @@
 .ts-text.is-truncated {
     text-overflow: ellipsis;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 /**
@@ -138,6 +139,7 @@
     font-weight: 500;
     color: var(--gray-900);
     font-size: var(--relative-small);
+    line-height: 1;
 }
 
 /**
